updates the Jupyter notebook in the repository

--- a/Capstone_project_notebook.ipynb
+++ b/Capstone_project_notebook.ipynb
@@ -14,7 +14,7 @@
     "by Jianxu Shi   \n",
     "Data Scientist in Training   \n",
     "  \n",
-    "*This Jupyter notebook is built on IBM Skills Network Labs and will be mainly used for the Capstone project. \\\n",
+    "*This Jupyter notebook is built on IBM Skills Network Labs and will be mainly used for the Capstone project. \n",
     "The notebook is pushed to a Github repository and a link to the notebook will be shared.*"
    ]
   },
