--- a/Q3_Segment_Cluster_N_Toronto.ipynb
+++ b/Q3_Segment_Cluster_N_Toronto.ipynb
@@ -1102,15 +1102,15 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: D4HWMP1ULFHF5WXNORH44OCY4Y52HDARDHYDZLSHE4YF0IVB\n",
-      "CLIENT_SECRET:N4SEJSBFQBEABJFBBTUI5PAM2NRT24E2TFM3HAUEBJE10VI5\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
    "source": [
     "# @hidden_cell\n",
-    "CLIENT_ID = 'D4HWMP1ULFHF5WXNORH44OCY4Y52HDARDHYDZLSHE4YF0IVB' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'N4SEJSBFQBEABJFBBTUI5PAM2NRT24E2TFM3HAUEBJE10VI5' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20190914' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
